--- a/pom.xml
+++ b/pom.xml
@@ -3,4 +3,12 @@
   <groupId>onJava8</groupId>
   <artifactId>onJava8</artifactId>
   <version>0.0.1-SNAPSHOT</version>
+  
+  <dependencies>
+  	<dependency>
+  		<groupId>com.sun.mail</groupId>
+  		<artifactId>javax.mail</artifactId>
+  		<version>1.6.0</version>
+  	</dependency>
+  </dependencies>
 </project>
