--- a/pom.xml
+++ b/pom.xml
@@ -10,5 +10,10 @@
   		<artifactId>javax.mail</artifactId>
   		<version>1.6.0</version>
   	</dependency>
+  	<dependency>
+    <groupId>org.json</groupId>
+    <artifactId>json</artifactId>
+    <version>20180813</version>
+</dependency>
   </dependencies>
 </project>
