--- a/pom.xml
+++ b/pom.xml
@@ -15,5 +15,10 @@
     <artifactId>json</artifactId>
     <version>20180813</version>
 </dependency>
+<dependency>
+    <groupId>org.apache.poi</groupId>
+    <artifactId>poi</artifactId>
+    <version>3.17</version>
+</dependency>
   </dependencies>
 </project>
